// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Lexer addRule method should match snapshot 1`] = `
Lexer {
  "column": 1,
  "index": 0,
  "line": 1,
  "rules": Array [
    Rule {
      "fn": undefined,
      "regex": /\\\\n/gmu,
      "type": "newline",
    },
  ],
  "state": State {
    "consumed": "",
    "input": "",
    "position": Object {
      "column": 0,
      "index": 0,
      "line": 1,
    },
    "remaining": "",
    "tokens": Array [],
  },
}
`;

exports[`Lexer setInput method should match snapshot 1`] = `
Lexer {
  "column": 1,
  "index": 0,
  "line": 1,
  "rules": Array [],
  "state": State {
    "consumed": "",
    "input": "some random input string",
    "position": Object {
      "column": 0,
      "index": 0,
      "line": 1,
    },
    "remaining": "",
    "tokens": Array [],
  },
}
`;

exports[`Lexer should match snapshot 1`] = `
Lexer {
  "column": 1,
  "index": 0,
  "line": 1,
  "rules": Array [],
  "state": State {
    "consumed": "",
    "input": "random string of random strings",
    "position": Object {
      "column": 0,
      "index": 0,
      "line": 1,
    },
    "remaining": "",
    "tokens": Array [],
  },
}
`;
